<resources>
    <string name="app_name">RemoteDesktop</string>
    <string name="target_ip">输入目标IP地址</string>
    <string name="data_source">数据来源</string>
    <string name="source_screen">屏幕</string>
    <string name="source_camera">摄像头</string>
    <string name="transfer_way">传输方式(暂不支持UDP)</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="start_server">开服</string>
    <string name="describe">辅助权限模拟手势</string>
    <string name="accessibility_label">RemoteDesktop执行远程操作</string>
    <string name="floating">悬浮权限检查</string>
    <string name="accessibility">辅助权限检查</string>
    <string name="way_accessibility">辅助权限</string>
    <string name="way_root">ROOT</string>
    <string name="accessibility_or_root">控制方式</string>
    <string name="source_null">无</string>
    <string name="source_mic">麦克风</string>
    <string name="source_sound">内录(MIUI)</string>
    <string name="start_receive">接收</string>
    <string name="foreground_running_content_text">前台服务正在运行</string>
    <string name="main_download">接收</string>
    <string name="main_upload">发送</string>
    <string name="main_info">关于</string>
    <string name="way_null">无</string>
    <string name="background">background</string>
</resources>
