<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/target_ip" />

    <Button
        android:id="@+id/main_start_receive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_receive" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_source"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/data_source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/source_screen"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/source_screen" />

        <RadioButton
            android:id="@+id/source_camera"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/source_camera" />

        <RadioButton
            android:id="@+id/source_null_video"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/source_null" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/data_source_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/source_mic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/source_mic" />

        <RadioButton
            android:id="@+id/source_sound"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/source_sound" />

        <RadioButton
            android:id="@+id/source_null_audio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/source_null" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_way"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/transfer_way"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/way_tcp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/tcp" />

        <RadioButton
            android:id="@+id/way_udp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/udp" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accessibility_or_root"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/accessibility_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/way_accessibility"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/way_accessibility" />

        <RadioButton
            android:id="@+id/way_root"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/way_root" />

        <RadioButton
            android:id="@+id/way_null"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/way_null" />

    </RadioGroup>

    <Button
        android:id="@+id/main_start_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_server" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/permission_floating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/floating" />

        <Button
            android:id="@+id/permission_accessibility"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/accessibility" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/debug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:padding="10dp" />
    </ScrollView>

</LinearLayout>